test/programs/invalid/interpreter/VariableNotDefinedInitialization.lox
var x = y + 3; // error
